@startuml

state INITIAL
state SWIPING
state CONVERSATION
state PROFILE
state MATCH_LIST

[*] --> INITIAL
INITIAL --> IN_APP
note on link
Login
CreateUser
end note
IN_APP --> SWIPING
note on link
StartSwiping
endnote
SWIPING --> SWIPING
note on link
Swipe
endnote
IN_APP --> IN_APP
note on link
...
end note
IN_APP --> MATCH_LIST
note on link
GetMatches
endnote
MATCH_LIST --> CONVERSATION
note on link
OpenConversation
endnote
CONVERSATION ---> MATCH_LIST
note on link
GetMatches
endnote
CONVERSATION --> CONVERSATION
note on link
SendMessage
ReadMessage
end note
IN_APP --> PROFILE
note on link
GetProfile
end note
PROFILE --> PROFILE
note on link
EditProfile
end note
PROFILE --> INITIAL
note on link
DeleteProfile
logout
end note

CONVERSATION --> PROFILE
note on link
GetProfile
end note
SWIPING --> PROFILE
note on link
GetProfile
end note
SWIPING --> CONVERSATION
note on link
OpenConversation
end note


@enduml